# FletApp

./: .gitignore  README.md  add_images.vba  hello.py  pyproject.toml  requirements.txt
.cursor/: 000_general.mdc  001_project.mdc  002_flet.mdc
config/: ai_config.json  ai_config_example.json  keywords.txt  logging.yaml  prompt.txt
data/: dummy_items_data.sql  dummy_outlook_data.sql  dummy_task_data.sql  items.sql  outlook.sql  tasks.sql
doc/: View - Style.md
documents/: mvp.md  mvvm.md  view.md
logs/: app.log.2025-03-18  app.log.2025-03-19
src/: main.py  router.py
src/core/: database.py  logger.py  observable.py  router.py
src/models/: home_content_model.py  preview_content_model.py  task_content_model.py
src/models/azure/: ai_client.py  ai_config.py  ai_config_loader.py  ai_review.py  litellm_client.py  model_manager.py  openai_client.py  task_manager.py  token_observer.py
src/models/interfaces/: model_interface.py
src/models/mail/: mail.py  styled_text.py
src/models/outlook/: mail_processing_manager.py  outlook_account_model.py  (+6 more)
src/presenters/: main_presenter.py
src/util/: object_util.py  visualize_model_status.py
src/viewmodels/: home_content_viewmodel.py  home_viewmodel.py  main_contents_viewmodel.py  main_viewmodel.py  preview_content_viewmodel.py  side_bar_viewmodel.py  sidebar_viewmodel.py  task_content_viewmodel.py
src/views/: first_view.py  main_view.py  menu_view.py  second_view.py
tests/: datastore.py  dialog.py  test_create_database.py  test_get_root_folders.py  test_insert_dummy_data.py  test_outlook_service.py  update.py
(+35 files in other folders)
